--- a/updown_button_depth.html
+++ b/updown_button_depth.html
@@ -59,7 +59,7 @@
 			})
 
 
-			$('#btnUp').on('click',function(e){
+			$('.btnUp').on('click',function(e){
 				e.preventDefault()
 				if(selected > 0){
 					target.children().eq(selected-1).before(target.children().eq(selected))
@@ -67,7 +67,7 @@
 				}
 			})
 
-			$('#btnDown').on('click',function(e){
+			$('.btnDown').on('click',function(e){
 				e.preventDefault()
 				if(selected < idx-1){
 					target.children().eq(selected+1).after(target.children().eq(selected))
@@ -111,9 +111,10 @@
 		li {list-style:none}
 		.wrap {padding:50px}
 		.menuWrap:after {content:'';clear:both;display:block}
-		.menu {width:200px;height:300px; float:left; margin-right:10px; border:1px solid #ddd; border-radius:3px; padding:10px 0; overflow-y:scroll}
-		.menu li {padding:5px 20px;cursor:pointer}
-		.menu li.selected {background:#ddd}
+		.menu {width:200px; float:left; margin-right:10px}
+		.menu ul {height:300px; border:1px solid #ddd; border-radius:3px; padding:10px 0; overflow-y:scroll}
+		.menu ul li {padding:5px 20px;cursor:pointer}
+		.menu ul li.selected {background:#ddd}
 		.btnWrap {width:100%;clear:both; margin-top:10px;}
 		.btnWrap button {border:1px solid #ddd; padding:5px 10px; min-width:50px;cursor:pointer;outline:0}
 	</style>
@@ -141,6 +142,10 @@
 					<li>menu1-9</li>
 					<li>menu1-10</li>
 				</ul>
+				<div class="btnWrap">
+					<button class="btnUp">Up</button>
+					<button class="btnDown">Down</button>
+				</div>
 			</div>
 			<div class="menu">
 				<ul>
@@ -149,11 +154,11 @@
 					<li>menu1-1-3</li>
 					<li>menu1-1-4</li>
 				</ul>
+				<div class="btnWrap">
+					<button class="btnUp">Up</button>
+					<button class="btnDown">Down</button>
+				</div>
 			</div>
-		</div>
-		<div class="btnWrap">
-			<button id="btnUp">Up</button>
-			<button id="btnDown">Down</button>
 		</div>
 	</div>
 </body>
